--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "patrick-server",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Embeded node js server on a model boat (the patrick).",
-  "main": "server.js",
+  "main": "lib/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon lib/main.js",
